--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container pt-5">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" alt="Yoga App Display" />
+          <img src="yoga.png" class="img-fluid rounded" alt="Yoga App Display" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -82,12 +82,12 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" alt="Weather App Display"/>
+          <img src="weather.png" class="img-fluid rounded" alt="Weather App Display"/>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" alt="Yogurt App Display"/>
+          <img src="yogurt.png" class="img-fluid rounded" alt="Yogurt App Display"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
