--- a/about.html
+++ b/about.html
@@ -53,13 +53,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <img src="images/weather.png" class="img-fluid rounded" alt="Weather App display"/>
+            <img src="weather.png" class="img-fluid rounded" alt="Weather App display"/>
           </div>
           <div class="col-md-4">
-            <img src="images/yoga.png" class="img-fluid rounded" alt="Yoga App Display"/>
+            <img src="yoga.png" class="img-fluid rounded" alt="Yoga App Display"/>
           </div>
           <div class="col-md-4">
-            <img src="images/yogurt.png" class="img-fluid rounded" alt="Yogurt App Display" />
+            <img src="yogurt.png" class="img-fluid rounded" alt="Yogurt App Display" />
           </div>
         </div>
       </div>
